# pwmfan

./: .gitignore  .gitmodules  README.md  fp-lib-table  pwmfan-cache.lib  pwmfan.kicad_pcb  pwmfan.pro  pwmfan.sch
gerbers/: pwmfan-B_Cu.gbr  pwmfan-B_Mask.gbr  pwmfan-B_Paste.gbr  pwmfan-B_SilkS.gbr  pwmfan-Edge_Cuts.gbr  pwmfan-F_Cu.gbr  pwmfan-F_Mask.gbr  pwmfan-F_Paste.gbr  pwmfan-F_SilkS.gbr  pwmfan-NPTH.drl  pwmfan-PTH.drl
pwmfan.pretty/: QR.kicad_mod  RE111F-20B.kicad_mod
software/: Cargo.toml  program.sh
software/src/: main.rs
