[package]
name = "software"
version = "0.1.0"
authors = ["tom"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bare-metal = "0.2.5"
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
panic-halt = "*"
rotary-encoder-hal = "*"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.4"

[dependencies.stm32f0xx-hal]
features = ["stm32f042", "rt"]
version = "0.16.0"

[features]
default = ["rt"]
rt = []

[profile]
[profile.dev]
debug = true
opt-level = 1
lto = true

[profile.release]
debug = false
lto = true
opt-level = "s"
